--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,15 @@
 	    <maven.compiler.source>1.6</maven.compiler.source>
 	    <maven.compiler.target>1.6</maven.compiler.target>
     </properties>
+	<build>
+	<plugins>
+	 <plugin>
+	      <groupId>org.sonarsource.scanner.maven</groupId>
+	      <artifactId>sonar-maven-plugin</artifactId>
+	      <version>3.2</version>
+	  </plugin>
+	</plugins>
+	 </build>
 </project>
 
 
